--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <div class="tag">
         <h3>Python</h3>
         </div>
-        <div class="desc">
+<!--         <div class="desc">
           <p>This Certificate is Issued by Swayam </p>
           <div class="btns">
             <a href="Certifications\The Joy of Computing using Python.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
@@ -332,7 +332,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="box tilt">
       <img draggable="false" src="Certifications\octanet java inten.jpg" alt="" />
