--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           <p>This Certificate is Issued by OCTTANET</p>
           <div class="btns">
             <a href="Certifications\octanet java inten.jpg" class="btn" target="_self"><i class="fas fa-eye"></i></a>
-            <a href="Certifications\octanet java inten.jpg" download="" class="btn" target="_self"> <i class="fas fa-"></i></a>
+            <a href="Certifications\octanet java inten.jpg" download="" class="btn" target="_self"> <i class="fas fa-download"></i></a>
           </div>
         </div>
       </div>
